# curso-dj-enquetes

./: .gitignore  Pipfile  README  pyproject.toml
django-polls/: setup.cfg  setup.py  version.txt
django-polls/polls/: views.py
django-polls/polls/migrations/: 0001_initial.py
django-polls/polls/static/polls/: style.css
mysite/: settings.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
