[tool.poetry]
name = "dj-enquetes"
version = "0.1.0"
description = ""
authors = ["britodfbr <britodfbr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "3.2.10;"
coverage = "5.3"
Django = "3.1.2"
pytz = "2020.1"
sqlparse = "0.4.1;"
django-polls = {path = "django-polls"}

[tool.poetry.dev-dependencies]
bump2version = "1.0.1;"
bumpversion = "0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
